fixing issues for perf analysis notebooks

--- a/docs/notebooks/perf_analysis/profiling/topo.ini
+++ b/docs/notebooks/perf_analysis/profiling/topo.ini
@@ -3,65 +3,75 @@ model-name = resnet50
 in-graph = 
 mode = inference
 precision = fp32
-data-location = 
-data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+data-location =
+data-download =
 throughput-keyword = Throughput
 throughput-index = 1
 wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_fp32_pretrained_model.pb
 json-fname = timeline_resnet50_f32_infer_merged_runs.json
 patches = 0001-resnet50-f32-TF-timeline.patch
+mkl-only = False
+support-accuracy = False
 
 [resnet50 infer int8]
 model-name = resnet50
 in-graph = 
 mode = inference
 precision = int8
-data-location = 
-data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+data-location =
+data-download =
 throughput-keyword = Throughput
 throughput-index = 1
 wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_int8_pretrained_model.pb
 json-fname = timeline_resnet50_int8_infer_merged_runs.json
 patches = 0001-resnet50-int8-TF-timeline.patch
+mkl-only = True
+support-accuracy = False
 
 [resnet50v1_5 infer fp32]
 model-name = resnet50v1_5
 in-graph = 
 mode = inference
 precision = fp32
-data-location = 
-data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+data-location =
+data-download =
 throughput-keyword = Throughput
 throughput-index = 1
 wget = https://zenodo.org/record/2535873/files/resnet50_v1.pb
 json-fname = timeline_resnet50v1_5_f32_infer_merged_runs.json
 patches = 0001-resnet50v1_5-f32-TF-timeline.patch
+mkl-only = False
+support-accuracy = False
 
 [resnet50v1_5 infer bf16]
 model-name = resnet50v1_5
 in-graph = 
 mode = inference
 precision = bfloat16
-data-location = 
-data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+data-location =
+data-download =
 throughput-keyword = Throughput
 throughput-index = 1
 wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_v1_5_bfloat16.pb
 json-fname = timeline_resnet50v1_5_bf16_infer_merged_runs.json
 patches = 0001-resnet50v1_5-f32-TF-timeline.patch
+mkl-only = True
+support-accuracy = False
 
 [resnet50v1_5 infer int8]
 model-name = resnet50v1_5
 in-graph = 
 mode = inference
 precision = int8
-data-location = 
-data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
+data-location =
+data-download =
 throughput-keyword = Throughput
 throughput-index = 1
 wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50v1_5_int8_pretrained_model.pb
 json-fname = timeline_resnet50v1_5_int8_infer_merged_runs.json
 patches = 0001-resnet50v1_5-f32-TF-timeline.patch
+mkl-only = True
+support-accuracy = False
 
 [resnet50v1_5 train fp32]
 model-name = resnet50v1_5
@@ -70,10 +80,12 @@ precision = fp32
 checkpoint = ./
 data-location =
 data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
-throughput-keyword = average
+throughput-keyword = global_step/sec
 throughput-index = -1
 json-fname = timeline_resnet50v1_5_f32_train_merged_runs.json
 patches = 0001-resnet50v1_5-train-fp32.patch
+mkl-only = True
+support-accuracy = False
 
 [resnet50v1_5 train bfloat16]
 model-name = resnet50v1_5
@@ -82,10 +94,12 @@ precision = bfloat16
 checkpoint = ./
 data-location =
 data-download = To get training data, please refer to the page "https://github.com/IntelAI/models/tree/master/datasets/imagenet/README.md"
-throughput-keyword = average
+throughput-keyword = global_step/sec
 throughput-index = -1
 json-fname = timeline_resnet50v1_5_bf16_train_merged_runs.json
 patches = 0001-resnet50v1_5-train-bfloat16.patch
+mkl-only = True
+support-accuracy = False
 
 [densenet169 infer fp32]
 model-name = densenet169
@@ -97,6 +111,8 @@ throughput-index = 3
 wget = https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/densenet169_fp32_pretrained_model.pb
 json-fname = timeline_densenet169_f32_infer_merged_runs.json
 patches = 0001-densenet169-infer-fp32.patch
+mkl-only = False
+support-accuracy = False
 
 [wide_deep infer fp32]
 model-name = wide_deep
@@ -112,6 +128,8 @@ data-location =
 checkpoint = 
 data-download = python benchmarks/recommendation/tensorflow/wide_deep/inference/fp32/data_download.py --data_dir widedeep_dataset #Then set data-location folder as CURRENTPATH/widedeep_dataset
 preprocessing = git clone https://github.com/tensorflow/models.git tensorflow-models; cd tensorflow-models; git fetch origin pull/7461/head:wide-deep-tf2 ; git checkout wide-deep-tf2 # Then set model-source-dir as CURRENTPATH/tensorflow-models
+mkl-only = True
+support-accuracy = False
 
 [bert_large infer fp32]
 model-name = bert_large
@@ -128,4 +146,6 @@ output-dir =
 infer-option = =SQuAD
 profile = =True
 data-download = wget https://storage.googleapis.com/bert_models/2019_05_30/wwm_uncased_L-24_H-1024_A-16.zip; unzip wwm_uncased_L-24_H-1024_A-16.zip; wget https://rajpurkar.github.io/SQuAD-explorer/dataset/dev-v1.1.json -P wwm_uncased_L-24_H-1024_A-16 #Then set data-location folder as CURRENTPATH/wwm_uncased_L-24_H-1024_A-16
+mkl-only = False
+support-accuracy = False
 
