Add missing mpi and horovod packages for Bert Large BFloat16

--- a/tools/docker/specs/tensorflow/bert-large-bfloat16-training_spec.yml
+++ b/tools/docker/specs/tensorflow/bert-large-bfloat16-training_spec.yml
@@ -1,7 +1,7 @@
 releases:
   versioned:
     tag_specs:
-    - '{_TAG_PREFIX}{intel-tf}{language-modeling}{bert-large-bfloat16-training}'
+    - '{_TAG_PREFIX}{intel-tf}{language-modeling}{mpi-horovod}{bert-large-bfloat16-training}'
 slice_sets:
   bert-large-bfloat16-training:
   - add_to_name: -bert-large-bfloat16-training
