--- a/k8s/language_modeling/tensorflow/bert_large/training/fp32/mlops/single-node/user-allocated-pvc/kustomization.yaml
+++ b/k8s/language_modeling/tensorflow/bert_large/training/fp32/mlops/single-node/user-allocated-pvc/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- config-map.yaml
 - service-account.yaml
-- mpi-job.yaml
+- pod.yaml
 namespace: default
