--- a/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/serving/user-allocated-pvc/kustomization.yaml
+++ b/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/serving/user-allocated-pvc/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- config-map.yaml
 - service-account.yaml
 - pod.yaml
-configMapGenerator:
-- files:
-  - fp32_inference.sh
-  name: mlops-scripts
 namespace: default
