--- a/tools/docker/specs/tensorflow/mlperf-gnmt-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/mlperf-gnmt-fp32-inference_spec.yml
@@ -30,10 +30,10 @@ slice_sets:
       text_replace:
         <docker image>: 'intel/language-translation:tf-2.3.0-imz-2.1.0-mlperf-gnmt-fp32-inference'
         <mode>: inference
-        <model name>: Mlperf GNMT
-        <package dir>: mlperf_gnmt-fp32-inference
-        <package name>: mlperf_gnmt-fp32-inference.tar.gz
-        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_1_0/mlperf_gnmt-fp32-inference.tar.gz'
+        <model name>: MLPerf GNMT
+        <package dir>: mlperf-gnmt-fp32-inference
+        <package name>: mlperf-gnmt-fp32-inference.tar.gz
+        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_1_0/mlperf-gnmt-fp32-inference.tar.gz'
         <precision>: FP32
         <use case>: language_translation
       uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/fp32
