--- a/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/single-node/user-allocated-pvc/kustomization.yaml
+++ b/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/single-node/user-allocated-pvc/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- config-map.yaml
 - service-account.yaml
 - pod.yaml
-configMapGenerator:
-- files:
-  - fp32_training.sh
-  name: mlops-scripts
 namespace: default
