--- a/tools/docker/specs/pytorch/pytorch-resnet50-fp32-inference_spec.yml
+++ b/tools/docker/specs/pytorch/pytorch-resnet50-fp32-inference_spec.yml
@@ -29,12 +29,12 @@ slice_sets:
         uri: models/quickstart/image_recognition/pytorch/resnet50/inference/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: 'amr-registry.caas.intel.com/aipg-tf/model-zoo-ci:66-ci-build-pytorch-resnet50-fp32-inference'
+        <docker image>: 'intel/image-recognition:pytorch-1.5.0-rc3-imz-2.2.0-resnet50-fp32-inference'
         <mode>: inference
         <model name>: ResNet50
         <package dir>: pytorch-resnet50-fp32-inference
         <package name>: pytorch-resnet50-fp32-inference.tar.gz
-        <package url>: 'https://ubit-artifactory-or.intel.com/artifactory/aipg-local/aipg-tf/ML-container-build-from-partials/66/pytorch-resnet50-fp32-inference.tar.gz'
+        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_2_0/pytorch-resnet50-fp32-inference.tar.gz'
         <precision>: FP32
         <use case>: image_recognition
       uri: models/quickstart/image_recognition/pytorch/resnet50/inference/fp32
