--- a/tools/docker/specs/k8s/bert-large-fp32-training-k8s_spec.yml
+++ b/tools/docker/specs/k8s/bert-large-fp32-training-k8s_spec.yml
@@ -30,6 +30,8 @@ slice_sets:
             uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32/.docs/quickstart.md
           - name: Kubernetes
             uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32/.docs/kubernetes.md
+          - name: Trouble Shooting
+            uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32/.docs/troubleshooting.md
           - name: License link
             uri: models/k8s/language_modeling/tensorflow/bert_large/training/fp32/.docs/license.md
       args:
