fix for pipeline, see https://github.com/argoproj/argo/issues/2522#issuecomment-604546672
Signed-off-by: Kam D Kasravi <kam.d.kasravi@intel.com>

--- a/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-mounted-nfs/serving_accuracy.yaml
+++ b/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-mounted-nfs/serving_accuracy.yaml
@@ -4,6 +4,7 @@ metadata:
   name: rfcn-fp32-inference-wf # {"$openapi":"WORKFLOW_NAME"}
 spec:
   entrypoint: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
+  serviceAccountName: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
   templates:
   - name: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
     steps:
