--- a/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/pipeline/user-mounted-nfs/train_and_serve.yaml
+++ b/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/pipeline/user-mounted-nfs/train_and_serve.yaml
@@ -4,6 +4,7 @@ metadata:
   name: wide-deep-large-ds-fp32-train-serve-wf # {"$openapi":"WORKFLOW_NAME"}
 spec:
   entrypoint: wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_NAME"}
+  serviceAccountName: wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_NAME"}
   arguments:
     parameters:
     - name: DEPLOYMENT_NAME
