fix for PREPROCESS_IMAGE_VERSION
Signed-off-by: Kam D Kasravi <kam.d.kasravi@intel.com>

--- a/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-mounted-nfs/serving_accuracy.yaml
+++ b/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-mounted-nfs/serving_accuracy.yaml
@@ -54,7 +54,13 @@ spec:
       volumeMounts:
       - name: nfs-path
         mountPath: /nfs # {"$openapi":"NFS_PATH"}
+      - name: coco-raw-data
+        mountPath: /datasets # {"$openapi":"DATASET_DIR"}
+        readOnly: true
     volumes:
+    - name: coco-raw-data
+      hostPath:
+        path: /datasets # {"$openapi":"DATASET_DIR"}
     - name: nfs-path
       nfs:
         server: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
