--- a/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-allocated-pvc/serving_accuracy.yaml
+++ b/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-allocated-pvc/serving_accuracy.yaml
@@ -51,9 +51,15 @@ spec:
       - configMapRef:
           name: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
       volumeMounts:
+      - name: coco-raw-data
+        mountPath: /datasets # {"$openapi":"DATASET_DIR"}
+        readOnly: true
       - name: pvc-path
         mountPath: /pvc # {"$openapi":"PVC_PATH"}
     volumes:
+    - name: coco-raw-data
+      hostPath:
+        path: /datasets # {"$openapi":"DATASET_DIR"}
     - name: pvc-path
       persistentVolumeClaim:
         claimName: workdisk # {"$openapi":"PVC_NAME"}
