--- a/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-mounted-nfs/serving_accuracy.yaml
+++ b/k8s/object_detection/tensorflow/rfcn/inference/fp32/mlops/pipeline/user-mounted-nfs/serving_accuracy.yaml
@@ -4,7 +4,6 @@ metadata:
   name: rfcn-fp32-inference-wf # {"$openapi":"WORKFLOW_NAME"}
 spec:
   entrypoint: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
-  serviceAccountName: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
   templates:
   - name: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
     steps:
@@ -30,6 +29,9 @@ spec:
       - name: coco-raw-data
         mountPath: /datasets # {"$openapi":"DATASET_DIR"}
         readOnly: true
+      - name: mlops-scripts
+        mountPath: /workspace/preprocess-coco-val/scripts/preprocess_coco_val.sh # {"$openapi":"PREPROCESS_COMMAND"}
+        subPath: preprocess_coco_val.sh # {"$openapi":"PREPROCESS_SCRIPT"}
     volumes:
     - name: coco-raw-data
       hostPath:
@@ -38,6 +40,13 @@ spec:
       nfs:
         server: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
         path: /nfs # {"$openapi":"NFS_PATH"}
+    - name: mlops-scripts
+      configMap:
+        name: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
+        defaultMode: 0770
+        items:
+        - key: preprocess_coco_val.sh # {"$openapi":"PREPROCESS_SCRIPT"}
+          path: preprocess_coco_val.sh # {"$openapi":"PREPROCESS_SCRIPT"}
   - name: rfcn-fp32-accuracy
     securityContext:
       runAsUser: 0 # {"$openapi":"USER_ID"}
@@ -54,14 +63,18 @@ spec:
       volumeMounts:
       - name: nfs-path
         mountPath: /nfs # {"$openapi":"NFS_PATH"}
-      - name: coco-raw-data
-        mountPath: /datasets # {"$openapi":"DATASET_DIR"}
-        readOnly: true
+      - name: mlops-scripts
+        mountPath: /workspace/rfcn-fp32-inference/quickstart/fp32_accuracy.sh # {"$openapi":"MODEL_COMMAND"}
+        subPath: fp32_accuracy.sh # {"$openapi":"MODEL_SCRIPT"}
     volumes:
-    - name: coco-raw-data
-      hostPath:
-        path: /datasets # {"$openapi":"DATASET_DIR"}
     - name: nfs-path
       nfs:
         server: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
         path: /nfs # {"$openapi":"NFS_PATH"}
+    - name: mlops-scripts
+      configMap:
+        name: rfcn-fp32-inference # {"$openapi":"MODEL_NAME"}
+        defaultMode: 0770
+        items:
+        - key: fp32_accuracy.sh # {"$openapi":"MODEL_SCRIPT"}
+          path: fp32_accuracy.sh # {"$openapi":"MODEL_SCRIPT"}
