--- a/tools/docker/specs/pytorch/base_spec.yml
+++ b/tools/docker/specs/pytorch/base_spec.yml
@@ -27,17 +27,22 @@ releases:
         tag_specs: []
 
 slice_sets:
-    pytorch:
-        - add_to_name: "pytorch"
-          partials:
-              - pytorch/pytorch-base
-
     ubuntu:
     - add_to_name: ""
       partials:
           - ubuntu-base
       args:
           - UBUNTU_VERSION=20.04
+
+    pytorch:
+        - add_to_name: "pytorch"
+          partials:
+              - pytorch/pytorch-base
+          files:
+               - source: LICENSE
+                 destination: licenses/LICENSE
+               - source: third_party
+                 destination: licenses/third_party
 
     intel-python:
         - add_to_name: ""
@@ -47,3 +52,8 @@ slice_sets:
           args:
               - PY_VERSION=3
               - INTEL_PY_BUILD=2020.2
+          files:
+               - source: LICENSE
+                 destination: licenses/LICENSE
+               - source: third_party
+                 destination: licenses/third_party
