Add 'tcmalloc' dependency for 'wide and deep training'

--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-training_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-training_spec.yml
@@ -35,6 +35,7 @@ slice_sets:
     - destination: quickstart
       source: quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32
     partials:
+    - tcmalloc
     - model_package
     - entrypoint
     documentation:
