Add 'tcmalloc' dependency for 'wide and deep inference'

--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-inference_spec.yml
@@ -69,6 +69,7 @@ slice_sets:
     - destination: quickstart
       source: quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/fp32
     partials:
+    - tcmalloc
     - model_package
     - recommendation/pandas_install
     - entrypoint
