--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-int8-inference_spec.yml
@@ -69,6 +69,7 @@ slice_sets:
     - destination: quickstart
       source: quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/int8
     partials:
+    - tcmalloc
     - model_package
     - recommendation/pandas_install
     - entrypoint
