add mpi, nfd, olm operators
Signed-off-by: Kam D Kasravi <kam.d.kasravi@intel.com>

--- a/tools/k8s/devops/operators/mpi-operator/mpi-operator.yaml
+++ b/tools/k8s/devops/operators/mpi-operator/mpi-operator.yaml
@@ -185,7 +185,7 @@ spec:
       - args:
         - -alsologtostderr
         - --kubectl-delivery-image
-        - mpioperator/kubectl-delivery:latest
+        - mpioperator/kubectl-delivery:v0.2.3
         image: mpioperator/mpi-operator:v0.2.3
         imagePullPolicy: Always
         name: mpi-operator
