--- a/tools/docker/specs/k8s/wide-deep-large-ds-fp32-training-k8s_spec.yml
+++ b/tools/docker/specs/k8s/wide-deep-large-ds-fp32-training-k8s_spec.yml
@@ -89,3 +89,10 @@ slice_sets:
             value: "5G"
           - name: RESOURCE_REQUESTS_CPU
             value: "10"
+        tests:
+          - uri: k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.tests/deployments-yml-exist.sh
+          - uri: k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.tests/namespace-exists.sh
+            args:
+              - name: USER_NAME
+                value: $USER_NAME
+          - uri: k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.tests/single_node_deployment.sh
