--- a/benchmarks/object_detection/tensorflow/ssd-resnet34/requirements.txt
+++ b/benchmarks/object_detection/tensorflow/ssd-resnet34/requirements.txt
@@ -11,3 +11,5 @@ tensorflow-addons==0.11.0
 opencv-python
 numpy==1.17.4
 notebook>=6.1.5
+
+pygments>=2.7.4 # not directly required, pinned by Snyk to avoid a vulnerability
