--- a/tools/docker/specs/tensorflow/3d-unet-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/3d-unet-fp32-inference_spec.yml
@@ -29,7 +29,7 @@ slice_sets:
         uri: models/quickstart/image_segmentation/tensorflow/3d_unet/inference/cpu/fp32/.docs/license.md
       name: README.md
       text_replace:
-        <docker image>: 'intel/image-segmentation:1.15.2-3d-unet-fp32-inference'
+        <docker image>: 'intel/image-segmentation:tf-1.15.2-3d-unet-fp32-inference'
         <mode>: inference
         <model name>: 3D U-Net
         <package dir>: 3d-unet-fp32-inference
