Fix Python and TensorFlow Pip package versions for TF v1.15.2
Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/tools/docker/specs/tensorflow/faster-rcnn-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/faster-rcnn-fp32-inference_spec.yml
@@ -8,6 +8,7 @@ slice_sets:
     args:
     - PACKAGE_NAME=faster-rcnn-fp32-inference
     - TF_MODELS_BRANCH=tags/v1.12.0
+    - TENSORFLOW_TAG=1.15.2
     dockerfile_subdirectory: model_containers
     documentation:
       docs:
